[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.24.4"
replit = "^3.3.1"
Flask = "^2.3.3"
urllib3 = "^2.2.2"
bs4 = "^0.0.2"
Pillow = "^10.4.0"
webcolors = "^24.6"
opencv-python = "^4.10.0"
matplotlib = "^3.7.5"
numba = "^0.58.1"

[tool.poetry.dev-dependencies]
debugpy = "^1.8.5"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"